# 3c

./: .env.example  .gitignore  Dockerfile  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
panel/: __main__.py  app.py  config.py
panel/api/: apps.py  cloudflare.py  migadu.py  porkbun.py
static/: index.html
static/css/: main.css
static/js/: analytics.js  app.js  apps.js  dns.js  domains.js  email.js  pages.js  redirects.js  settings.js  zones.js
