[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "3c-panel"
version = "0.1.0"
description = "Self-hosted personal operations dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["panel"]
